--- a/_config.yml
+++ b/_config.yml
@@ -31,11 +31,7 @@ author:
   email            : "yangjiao@tongji.edu.cn" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=tqa1KZAAAAAJ"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
