--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "photo.png"
   name             : "Yang Jiao"
-  pronouns         : # example: "she/her"  
+  pronouns         : # example: "he/his"  
   bio              : "PhD student"
   location         : "Shanghai"
   employer         : "Tongji University"
