--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Yang Jiao / Personal page"
+title                    : "Yang Jiao"
 title_separator          : "-"
 name                     : &name "Yang Jiao"
 description              : &description "personal description"
