--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "photo.png"
   name             : "Yang Jiao"
   pronouns         : # example: "he/his"  
-  bio              : "PhD student"
+  bio              : "Ph.D. student"
   location         : "Shanghai"
   employer         : "Tongji University"
   uri              : # URL
